--- a/3080Site/crochetCache/css/cachestyles.css
+++ b/3080Site/crochetCache/css/cachestyles.css
@@ -1,7 +1,11 @@
 .header {
   background-color: #993399;
+  background-size: 80%;
   text-align: center;
-  padding: 20px;
+  padding-left: 35px;
+  padding-right: 0px;
+  margin-right: 0px; 
+  border-right: 0px;
 }
 .header img {
   align-content: center;
@@ -13,41 +17,7 @@
 }
 
 
-.wrapper {
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  grid-gap: 10px;
-  background-color: #2196F3;
-  padding: 10px;
-}
 
-.wrapper > div {
-  background-color: rgba(255, 255, 255, 0.8);
-  text-align: center;
-  padding: 20px 0;
-  font-size: 30px;
-}
-.box2 {
-  grid-column: 1/3;
-   grid-row-start: 1;
-  grid-row-end: 11;
-  
-}
-.box2 {
-  grid-column-start: 2;
-  grid-row: 3/4;
-}
-
-.box3 {
-  grid-column: 3 /span 2;
-  grid-row: 4/7;
-}
-
-.box4 {
-  grid-column: 6 /span 2;
-  grid-row: 9 /span 2;
-
-}
 
 
 .navigation {
@@ -121,8 +91,15 @@ body {
 }
 .column p {
   text-align: center;
-  font-size: 14pt;
+  font-size: 16pt;
+}
+.Blog p {
+  text-align: left;
+  font-size: 16pt;
 
+}
+.column p .Blog div img {
+  align-content: right;
 }
 .column a image {
   border-radius: 15px;
@@ -149,7 +126,7 @@ body {
 
 
 h3 {
- color:#8d7c68; 
+ color:#660066; 
 
 
 }
@@ -171,7 +148,7 @@ label {
 }
 
 input[type=submit] {
-  background-color: #4CAF50;
+  background-color: purple;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -181,7 +158,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #45a049;
+  background-color: plum;
 }
 
 .container {
